# kkuc_app

./: .gitignore  package-lock.json  package.json  pnpm-lock.yaml
KKUCAssistant/: =0.2.6  LANGGRAPH_STUDIO_SETUP.md  (+3 more)
KKUCAssistant/backend/: .env.example  CONVERSATION_CONTEXT_FIX.md  INTELLIGENT_ROUTING_README.md  LANGSMITH_MONITORING.md  LANGSMITH_SETUP.md  pyproject.toml  test_conversation_context.py  test_conversation_flow.py  test_link_generation.py
KKUCAssistant/backend/app/: ARCHITECTURE.md  RAG_README.md  agent.py  agent_old_backup.py  agent_refactored.py  react_agent.py  server.py  test_api.py  test_rag.py
KKUCAssistant/backend/app/ingestion/: README.md  __init__.py  config.py  pipeline.py  run.py
KKUCAssistant/backend/app/tests/: delete_all_bookings.py  google_calender_test.py  test_agent_booking.py  test_agent_context_flow.py  test_agent_routing.py  test_booking_flow.py  test_calendar_workflow.py  test_complete_booking_flow.py  test_full_agent_booking.py  test_random_booking.py  test_random_booking_with_setup.py  test_state_management.py
KKUCAssistant/backend/app/tools/: calendar_tools.py  web_scraping.py
KKUCAssistant/backend/app/tools/rag/: query_tools.py  search_tools.py  validation_tools.py
KKUCAssistant/backend/app/workflows/: CALENDAR_WORKFLOW_README.md  __init__.py  calendar_subgraph.py  calendar_workflow.py  rag_workflow.py  simplified_rag_workflow.py
KKUCAssistant/backend/app/workflows/calendar/: workflow.py
KKUCAssistant/backend/app/workflows/calendar/tools/: calendar_tools.py
KKUCAssistant/backend/app/workflows/rag/: workflow.py
(+52 files in other folders)
